[package]
name = "constdb"
version = "0.2.2"
authors = ["Ethan Steinberg"]
license = "MIT"
repository = "https://github.com/Lalaland/constdb-rust"
description = "constdb is a simple and fast read-only embedded key value datastore"


[dependencies]
failure = "0.1.1"
byteorder = "1.2.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3.0.0"